--- a/访问跨域.md
+++ b/访问跨域.md
@@ -1,10 +1,125 @@
-访问跨域
+# 访问跨域
 
-json p
+## jsonp
 
 ```
 src herf 链接没有限制
 ```
+
+### react 实现百度搜索
+
+```html
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Baidu</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/react.development.js"></script>
+    <script src="../js/react-dom.development.js"></script>
+    <script src="../js/babel.min.js"></script>
+    <script src="../js/jquery-3.2.1.js"></script>
+
+</head>
+
+<body>
+<div id="app"></div>
+<script type="text/babel">
+    class Message extends React.Component {
+        constructor() {
+            super();
+            this.state = {
+                lists: [],
+                index: 0
+            }
+        }
+
+        handleChange = (e) => {
+            let val = e.target.value;
+            /*this.setState({value:val});*/
+            $.ajax({
+                url: 'https://www.baidu.com/su?wd=' + val,
+                dataType: 'jsonp',
+                jsonp: 'cb',
+                context: this,
+                success: function (data) {
+                    this.setState({
+                        lists: data.s
+                    })
+                }
+            })
+        };
+        handleKeyDown = (e) => {
+            let keycode = e.keyCode;
+            let index = this.state.index;
+            let max = this.state.lists.length;
+            if (keycode == 38) {
+                this.setState({
+                    index: (index <= 0) ? (max - 1) : (index - 1),
+                }, () => {
+                    this.refs.v.value = this.state.lists[this.state.index];
+                });
+
+            } else if (keycode == 40) {
+                this.setState({
+                    index: (index >= max - 1) ? 0 : (index + 1)
+                }, () => {
+                    this.refs.v.value = this.state.lists[this.state.index];
+                });
+            } else if (keycode == 8) {
+                this.setState({
+                    index: ''
+                });
+            }
+        };
+        handleKeyUp = (e) => {
+            let keycode = e.keyCode;
+            if (keycode == 13) {
+                location.href="https://www.baidu.com/s?wd=" + this.state.lists[this.state.index];
+            }
+        };
+
+        render() {
+            return <div className="container ">
+                <div className="row">
+                    <div className="col-md-6 col-offset-2">
+                        <div className="panel panel-default">
+                            <div className="panel panel-heading">
+                                <div className="form-group">
+                                    <input type="text" className="form-control" onInput={this.handleChange} onKeyDown={this.handleKeyDown} onKeyUp={this.handleKeyUp} ref="v"/>
+                                </div>
+                            </div>
+                            <div className="panel panel-body">
+                                <ul className="list-group">
+                                    {
+                                        this.state.lists.map((list, index) => (
+                                                        <li key={index}
+                                                            className={"list-group-item" + (index === this.state.index ? ' active' : '' )}>
+                                                            {list}
+                                                        </li>
+                                            )
+                                        )
+                                    }
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+
+    ReactDOM.render(<Message/>, document.querySelector('#app'));
+
+</script>
+
+</body>
+</html>
+
+```
+
+
 
 API代理
 
